# conan-patchelf

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml  build.py  conanfile.py
test_package/: conanfile.py
